updating routing pages

--- a/express_website/views/index.jade
+++ b/express_website/views/index.jade
@@ -1,9 +1,27 @@
 extends layout
 
 block content
-  .container
-    .jumbotron
-      .container
-        h1 How may I Help You?
-        p Let’s hear it for computers with no noisy and clunky DVD drives! Death to physical media! Or not – what do you think? Are you ready to go DVD-less?
-        a.btn.btn-primary.btn-lg(href='#') Learn more &raquo;
+  .jumbotron
+    .container
+      h1 How may I Help You?
+      p.long-copy Let’s hear it for computers with no noisy and clunky DVD drives! Death to physical media! Or not – what do you think? Are you ready to go DVD-less?
+      a.btn.btn-primary.btn-lg(href='#') Learn more &raquo;
+  .container.spacing
+    div.style-h1
+      h3 We Are Awesome
+    .row
+      .col-md-4
+        h3 About Us
+        p.long-copy2 What order did you do the classes in? In the order listed below. Except some were taken at the same time. However if you followed this order serially you wouldn’t miss any prerequisites.
+              Did you grade the work yourself? Yes. Admittedly, this introduces some degree of error over having a professor grade my work. However, most of 
+        a.btn.btn-primary(href='#') View Details
+      .col-md-4
+        h3 Services
+        p.long-copy2 What order did you do the classes in? In the order listed below. Except some were taken at the same time. However if you followed this order serially you wouldn’t miss any prerequisites.
+              Did you grade the work yourself? Yes. Admittedly, this introduces some degree of error over having a professor grade my work. However, most of 
+        a.btn.btn-primary(href='#') View Details
+      .col-md-4
+        h3 Get In Touch
+        p.long-copy2 What order did you do the classes in? In the order listed below. Except some were taken at the same time. However if you followed this order serially you wouldn’t miss any prerequisites.
+              Did you grade the work yourself? Yes. Admittedly, this introduces some degree of error over having a professor grade my work. However, most of 
+        a.btn.btn-primary(href='#') View Details
