--- a/express_website/public/stylesheets/style.css
+++ b/express_website/public/stylesheets/style.css
@@ -1,12 +1,86 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding-top:  50px;
+  color: #555;
 }
 
-a {
-  color: #eee;
+.jumbotron {
+  background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(../images/bkg.jpeg) center center  fixed no-repeat;
+  background-size: cover;
+  color: #fff;
 }
 
-.btn-lg {
-  background-color: #3498db;
+.jumbotron h1 {
+  font-weight: 300;
+  font-size: 250%;
+}
+
+footer {
+  background: #ccc;
+  height: 50px;
+  text-align: center;
+  padding-top: 20px;
+
+}
+
+.spacing {
+  padding: 80px;
+}
+
+.style-h1 h3 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-weight: 300;
+  font-size: 230%;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  word-spacing: 4px;
+}
+
+.style-h1 h3:after {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 2px;
+  background: #286090;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 240%;
+    word-spacing: 4px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+
+h2 {
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    color: #555;
+}
+
+.long-copy {
+    line-height: 145%;
+    margin-bottom: 30px;
+    text-align: left;
+    font-family: 'Lato', sans-serif;
+    color: #fff;
+    word-spacing: 4px;
+    font-size: 17px;
+    width: 70%;
+    font-weight:400;
+}
+
+.long-copy2 {
+    line-height: 145%;
+    font-family: 'Lato', sans-serif;
+    color: #555;
+    word-spacing: 4px;
+    font-size: 17px;
 }
