--- a/express_website/views/layout.jade
+++ b/express_website/views/layout.jade
@@ -7,8 +7,9 @@ html
     meta( name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,400,700,900' rel='stylesheet')
   body
-    nav.navbar.navbar-light.navbar-fixed-top( style='background-color: #3498db;')
+    nav.navbar.navbar-inverse.navbar-fixed-top
       .container
           .navbar-header
                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false',  aria-controls='navbar')
@@ -22,11 +23,13 @@ html
                   li(class=(title === 'Home' ? 'active' : ''))
                       a(href='/') Home
                   li(class=(title === 'About' ? 'active' : ''))
-                      a(href='/') About Us
+                      a(href='/about') About Us
                   li(class=(title === 'Contact' ? 'active' : ''))
-                      a(href='/') Contact
+                      a(href='/contact') Contact
           
     block content
+    footer
+      p &copy; 2017, All Rights Reserved
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/javascripts/bootstrap.js')
