--- a/express_website/views/about.jade
+++ b/express_website/views/about.jade
@@ -3,10 +3,10 @@ extends layout
 block content
     .container
         h1 About Us
-        p Do you have a Windows CD or DVD, but can’t use your optical drive to install the operating system (OS) on your new computer? Or maybe you’re concerned about CD/DVD rot and just want to create a backup.
+        p.long-copy2 Do you have a Windows CD or DVD, but can’t use your optical drive to install the operating system (OS) on your new computer? Or maybe you’re concerned about CD/DVD rot and just want to create a backup.
         ul
             li There are several situations where USB drive installation media is beneficial:
             li Significantly faster installation rate vs regular installation media.
             li Keep original installation media in pristine condition.
             li asy to carry multiple operating systems on a single USB drive.
-        p Our relationship with Windows CDs and DVDs has changed, too. For instance, Windows 10 is available for sale on a USB drive. Discs are still available but are no longer the only method of installation. Furthermore, newly purchased hardware usually comes with an OS pre-installed.                Consequently, some users never actually use or even see installation media.
+        p.long-copy2 Our relationship with Windows CDs and DVDs has changed, too. For instance, Windows 10 is available for sale on a USB drive. Discs are still available but are no longer the only method of installation. Furthermore, newly purchased hardware usually comes with an OS pre-installed.                Consequently, some users never actually use or even see installation media.
