--- a/express_website/public/stylesheets/style.css
+++ b/express_website/public/stylesheets/style.css
@@ -1,4 +1,18 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
+  position: relative;
+  margin: 0;
+  min-height: 100%;
   padding-top:  50px;
   color: #555;
 }
@@ -15,6 +29,10 @@ body {
 }
 
 footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background: #ccc;
   height: 50px;
   text-align: center;
